//
//  AcesbilityIdentifierString.swift
//  ihtMadhushankha-Cobsccomp005
//
//  Created by Thushal Madhushankha on 2021-11-22.
//

import Foundation

struct AcesbilityIdentifierString{
    static let test_Login_Image: String = "LoginView_ImageView"
    static let test_Login_Text: String = "LoginView_TextView"
    static let test_Login_EmailField: String = "LoginView_EmailField"
    static let test_Login_PassField: String = "LoginView_PassField"
    static let test_Login_ForgetButton: String = "LoginView_ForgetButton"
    static let test_Login_LoginButton: String = "LoginView_LoginButton"
    static let test_Login_OrLabel: String = "LoginView_LoginView_OrLabel"
    static let test_Login_NewUserButton: String = "LoginView_NewUserButton"
    
    static let test_Home_ProgressView: String = "HomeView_ProgressView"
    static let test_Home_ParkSingleComp: String = "HomeView_ParkSingleComp"
    static let test_Home_LazyVGrid: String = "HomeView_LazyVGrid"
    static let test_Home_ScrollParkSlots: String = "HomeView_ScrollParkSlots"
    static let test_Home_TextTitle: String = "HomeView_TextTitle"
}
