//
//  TabMainViewString.swift
//  ihtMadhushankha-Cobsccomp005
//
//  Created by Thushal Madhushankha on 2021-11-11.
//

import Foundation

struct TabMainViewString{
    static let lbl_Home: String = "Home"
    static let lbl_Book: String = "Book"
    static let lbl_Settings: String = "Settings"

}
