//
//  LoginViewStrings.swift
//  ihtMadhushankha-Cobsccomp005
//
//  Created by Thushal Madhushankha on 2021-10-25.
//

import Foundation

struct LoginViewStrings{
    static let btn_signIn: String = "Sign In"
    static let lbl_dontHaveacnt: String = "New to Nibm? Register"
    static let lbl_titleSignIn: String = "Login"
    static let lbl_forgetPassword: String = "Forget Password?"
    static let lbl_email: String = "Email Address"
    static let lbl_password: String = "Password"
    static let pro_pleaseWait: String = "Please Wait"
}
