...
                        HomeView(type: HomeViewString.tab_Avaliable)
                            .tag(0)
                        HomeView(type: HomeViewString.tab_Book)
                            .tag(1)
                        HomeView(type: HomeViewString.tab_Reservation)
                            .tag(2)
                    }).accessibility(identifier: "HomeView_TopTab_Avaliable")
                        .tabViewStyle(PageTabViewStyle(indexDisplayMode: .never))
                }
                .foregroundColor(Color(#colorLiteral(red: 0.737254902, green: 0.1294117647, blue: 0.2941176471, alpha: 1)))
                .edgesIgnoringSafeArea(.top)
            }
//        }
...
